syntax = "proto3";

package ru.practicum.stats.proto;

option java_multiple_files = true;
option java_package = "ru.practicum.stats.proto";

message RecommendedEventProto {
    int64 event_id = 1;
    double score = 2;
}