syntax = "proto3";

package ru.practicum.stats.proto;

import "messages/UserPredictionsRequest.proto";
import "messages/RecommendedEvent.proto";
import "messages/SimilarEventsRequest.proto";
import "messages/InteractionsCountRequest.proto";

option java_package = "ru.practicum.stats.proto";
option java_multiple_files = true;

service RecommendationsController {
    rpc GetRecommendationsForUser(UserPredictionsRequestProto) returns (stream RecommendedEventProto);
    rpc GetSimilarEvents(SimilarEventsRequestProto) returns (stream RecommendedEventProto);
    rpc GetInteractionsCount(InteractionsCountRequestProto) returns (stream RecommendedEventProto);
}